--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,10 +5,10 @@
 # This file is formatted using TOML syntax - learn more at https://learnxinyminutes.com/docs/toml/
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
-# Title of your site
+# Rahul Anand
 title = "Academic"
 
-# The URL of your site.
+# www.therahulanand.com/
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
 baseurl = "/"
 
